--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -16296,6 +16296,46 @@ html body.logged-in.admin-bar .navbar.navbar-reveal.affix {
 	}
 }
 */
+.topbar {
+  padding: 0.25rem 0;
+  background-color: #175676;
+}
+@media (min-width: 1300px) {
+  .topbar {
+    padding: 0.5rem 0;
+  }
+}
+.topbar .topbar-list-contact,
+.topbar .topbar-list-social {
+  padding-left: 0;
+  list-style: none;
+}
+@media (min-width: 768px) {
+  .topbar .topbar-list-contact,
+  .topbar .topbar-list-social {
+    display: flex;
+  }
+}
+.topbar .topbar-list-contact li a,
+.topbar .topbar-list-social li a {
+  color: #fff;
+}
+@media (min-width: 768px) {
+  .topbar .topbar-list-contact {
+    flex-direction: row;
+  }
+}
+@media (min-width: 768px) {
+  .topbar .topbar-list-contact li {
+    margin-right: 2rem;
+  }
+}
+@media (min-width: 768px) {
+  .topbar .topbar-list-social {
+    flex-direction: row-reverse;
+  }
+}
+
 #main-nav {
   position: static;
   width: 100%;
