--- a/src/sass/theme/_nav.scss
+++ b/src/sass/theme/_nav.scss
@@ -1,7 +1,11 @@
 .topbar{
+	display: none;
 	padding: .25rem 0;
 	background-color: $secondary;
 	
+	@include media-breakpoint-up(md){
+		display: block;
+	}
 	@include media-breakpoint-up(xl){
 		padding: .5rem 0;
 	}
@@ -34,8 +38,11 @@
 	}
 	
 	.topbar-list-social{
-		@include media-breakpoint-up(md){
-			flex-direction: row-reverse;
+		display: flex;
+		flex-direction: row-reverse;
+		
+		li{
+			margin-left: .5rem;
 		}
 	}
 }
@@ -62,6 +69,7 @@
 		}
 		
 		.navbar-brand{
+			width: 200px!important;
 		}
 		
 		.nav-item{
@@ -74,6 +82,16 @@
 			
 			
 		}
+	}
+	
+	.navbar-inner{
+		padding: 1rem 0;
+		border-bottom: solid 1px $scorpion;
+		
+		@include media-breakpoint-up(lg){
+			padding: 2rem 0;
+		}
+		
 	}
 	
 	&.navbar-reveal{
@@ -105,18 +123,18 @@
 	
 	.navbar-brand{
 		padding: 0;
-		max-width: 150px;
+		max-width: 200px;
 		transition: all ease-in-out .3s;
 		
 		@include media-breakpoint-up(lg){
 		}
 		
 		@include media-breakpoint-up(xl){
-			max-width: 200px;
+			max-width: 300px;
 		}
 		
 		@include media-breakpoint-up(xxl){
-			//max-width: 250px;
+			max-width: 400px;
 		}
 	}
 	
