--- a/src/sass/theme/_btns.scss
+++ b/src/sass/theme/_btns.scss
@@ -1,8 +1,14 @@
 .btn{
-	padding: .4rem 2rem;
+	padding: .4rem 1.75rem;
 	border: none;
 	border-radius: 0;
 	text-transform: uppercase;
+	font-weight: 600;
+	
+	&.btn-primary{
+		color: $white;
+		background-color: $tamarind;
+	}
 	
 	&.btn-accent{
 		padding: 0;
