--- a/src/sass/theme/_nav.scss
+++ b/src/sass/theme/_nav.scss
@@ -21,6 +21,7 @@
 		li{
 			a{
 				color: $white;
+				text-decoration: none;
 			}
 		}
 	}
@@ -47,19 +48,27 @@
 	}
 }
 
-#main-nav{
-	position: static;
-	width: 100%;
-	z-index: 1;
-	background-color: $white;
-}
-
 .navbar{
 	width: 100%;
 	padding: .25rem 0;
 	
 	@include media-breakpoint-up(xxl){
 		padding: .5rem 0;
+	}
+	
+	&.navbar-main{
+		position: static;
+		width: 100%;
+		z-index: 1;
+		background-color: $white;
+		
+		@include media-breakpoint-up(lg){
+			margin-bottom: 1rem;
+		}
+		
+		@include media-breakpoint-up(xl){
+			margin-bottom: 2rem;
+		}
 	}
 	
 	&.affix{
@@ -85,8 +94,12 @@
 	}
 	
 	.navbar-inner{
+		display: flex;
+	  	flex-wrap: inherit;
+	  	align-items: center;
+	  	justify-content: space-between;
 		padding: 1rem 0;
-		border-bottom: solid 1px $scorpion;
+		border-bottom: solid 1px rgba($scorpion, .33);
 		
 		@include media-breakpoint-up(lg){
 			padding: 2rem 0;
