--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -17100,6 +17100,7 @@ body .h1, body .h2 {
   list-style: none;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 .footer .footer-list-inline li {
   padding: 0 0.5rem 0 0;
