--- a/src/sass/theme/_nav.scss
+++ b/src/sass/theme/_nav.scss
@@ -99,6 +99,7 @@
 	  	flex-wrap: inherit;
 	  	align-items: center;
 	  	justify-content: space-between;
+		width: 100%;
 		padding: 1rem 0;
 		border-bottom: solid 1px rgba($scorpion, .33);
 		
