--- a/src/sass/theme/_footer.scss
+++ b/src/sass/theme/_footer.scss
@@ -36,6 +36,10 @@
 			a{
 				color: $white;
 				text-decoration: underline dotted 1px rgba($white, .5);
+				
+				&:hover{
+					text-decoration-color: $primary;
+				}
 			}
 		}
 	}
@@ -59,6 +63,10 @@
 		a{
 			color: $white;
 			text-decoration: underline dotted 1px rgba($white, .5);
+			
+			&:hover{
+				text-decoration-color: $primary;
+			}
 		}
 	}
 	
