--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -16689,7 +16689,7 @@ body a {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom right;
-  background-image: url("http://aftermath-structural-repair.test/wp-content/uploads/2025/01/concrete-a.jpg");
+  background-image: url("http://robm288.sg-host.com/wp-content/uploads/2025/01/concrete-a.jpg");
 }
 .banner.banner-home > .container {
   padding-bottom: 3rem;
