--- a/src/sass/child-theme.scss
+++ b/src/sass/child-theme.scss
@@ -15,6 +15,7 @@
 @import "theme/type";
 @import "theme/banners";
 @import "theme/components";
+@import "theme/projects";
 @import "theme/btns";
 @import "theme/sliders";
 @import "theme/helpers";
