--- a/src/sass/theme/_projects.scss
+++ b/src/sass/theme/_projects.scss
@@ -1,3 +1,26 @@
+.project-item{
+	.project-item-inner{
+		.img-wrapper{
+			box-shadow: 0 0 45px 0 rgba($black, 0);
+			transition: box-shadow ease-in-out .3s;
+		}
+		
+		&:hover{
+			.img-wrapper{
+				box-shadow: 0 0 45px 0 rgba($black, .2);
+			}
+			
+			.btn{
+				color: $primary;
+				
+				i{
+					left: 4px;
+				}
+			}
+		}
+	}
+}
+
 .facetwp-facet-project_types{
 	.fs-wrap{
 		position: relative;
