--- a/src/sass/theme/_projects.scss
+++ b/src/sass/theme/_projects.scss
@@ -95,19 +95,22 @@
 
 .btn{
 	&.clear-facets{
-		display: block;
-		width: 100%;
 		padding: .4rem 1rem;
+		border: solid 1px $secondary;
+		background-color: #919090;
+		color: $white;
 		
 		i{
 			//transform: rotate(0deg);
-			transition-duration: .66;
+			transition-duration: .75;
 		}
 		
 		&:hover{
+			background-color: $secondary;
+			
 			i{
-				transform: rotate(180deg);
-				-webkit-transform: rotate(180deg);
+				transform: rotate(90deg);
+				-webkit-transform: rotate(90deg);
 			}
 		}
 	}
@@ -117,4 +120,9 @@ body .facetwp-flyout {
 	right: 0;
 	transform: translateX(100%);
   }
+  
+.flyout-row h3{
+	color: $secondary;
+	@extend .h4;
+}
 
