--- a/src/sass/theme/_projects.scss
+++ b/src/sass/theme/_projects.scss
@@ -1,5 +1,9 @@
 .project-item{
 	.project-item-inner{
+		display: block;
+		width: 100%;
+		text-decoration: none!important;
+		
 		.img-wrapper{
 			box-shadow: 0 0 45px 0 rgba($black, 0);
 			transition: box-shadow ease-in-out .3s;
@@ -18,6 +22,13 @@
 				}
 			}
 		}
+	}
+}
+
+.project-carousel{
+	.carousel-item{
+		@include img-wrapper();
+		@include img-ratio(66%);
 	}
 }
 
